rbx_xml/src/tests/snapshots/rbx_xml__tests__lighting-with-int32-attribute__encoded.snap
---
source: rbx_xml/src/tests/mod.rs
expression: encoded_text
---
<roblox version="4">
  <Item class="Lighting" referent="0">
    <Properties>
      <string name="Name">Lighting</string>
      <Color3 name="Ambient">
        <R>0.27450982</R>
        <G>0.27450982</G>
        <B>0.27450982</B>
      </Color3>
      <BinaryString name="AttributesSerialize">AQAAACAAAABSQlhfT3JpZ2luYWxUZWNobm9sb2d5T25GaWxlTG9hZAQDAAAA</BinaryString>
      <float name="Brightness">3</float>
      <SecurityCapabilities name="Capabilities">0</SecurityCapabilities>
      <Color3 name="ColorShift_Bottom">
        <R>0</R>
        <G>0</G>
        <B>0</B>
      </Color3>
      <Color3 name="ColorShift_Top">
        <R>0</R>
        <G>0</G>
        <B>0</B>
      </Color3>
      <float name="EnvironmentDiffuseScale">1</float>
      <float name="EnvironmentSpecularScale">1</float>
      <float name="ExposureCompensation">0</float>
      <Color3 name="FogColor">
        <R>0.75294125</R>
        <G>0.75294125</G>
        <B>0.75294125</B>
      </Color3>
      <float name="FogEnd">100000</float>
      <float name="FogStart">0</float>
      <float name="GeographicLatitude">0</float>
      <bool name="GlobalShadows">true</bool>
      <Color3 name="OutdoorAmbient">
        <R>0.27450982</R>
        <G>0.27450982</G>
        <B>0.27450982</B>
      </Color3>
      <bool name="Outlines">false</bool>
      <bool name="DefinesCapabilities">false</bool>
      <float name="ShadowSoftness">0.2</float>
      <int64 name="SourceAssetId">-1</int64>
      <BinaryString name="Tags"></BinaryString>
      <token name="Technology">3</token>
      <string name="TimeOfDay">14:30:00</string>
    </Properties>
  </Item>
</roblox>
